Book cover fixed

--- a/_layouts/book-review.liquid
+++ b/_layouts/book-review.liquid
@@ -224,8 +224,12 @@ layout: default
               }
 
           figure img {
-                  width:300px;
+                  max-width: 300px;
+                  max-height: 450px;
+                  width: auto;
+                  height: auto;
                   vertical-align: top;
+                  object-fit: contain;
 
                 }
 
