--- a/_layouts/book-review.liquid
+++ b/_layouts/book-review.liquid
@@ -224,12 +224,8 @@ layout: default
               }
 
           figure img {
-                  max-width: 300px;
-                  max-height: 450px;
-                  width: auto;
-                  height: auto;
+                  width:300px;
                   vertical-align: top;
-                  object-fit: contain;
 
                 }
 
